user can now login and user can be verified

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --env-file=.env server.js",
+    "dev": "nodemon --env-file=.env server.js ",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Bikal Adhikari",
+  "author": "Prem Acharya",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
